k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: generadorec
  labels:
    name: generadorec
    app: generadorec
