k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generadorec-service
  namespace: generadorec
  labels:
    app: generadorec
    component: app
spec:
  type: ClusterIP
  selector:
    app: generadorec
    component: app
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
